tests/should_fail/fn_wrong_arg_count.nv
module main

// SHOULD FAIL: wrong number of arguments to a function
fn add(a: Int, b: Int) -> Int { return a + b }
add(1, 2, 3)
